--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/LaunchScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/LaunchScreen.fxml
@@ -1,16 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="405.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <Slider fx:id="slide" max="1000.0" BorderPane.alignment="CENTER">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="239.0" prefWidth="491.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+   <left>
+      <VBox maxHeight="307.0" prefHeight="199.0" prefWidth="156.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="numChickLabel" prefHeight="84.0" prefWidth="176.0" text="        Number of Chicks :">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="videoSelectLabel" prefHeight="84.0" prefWidth="174.0" text="                Select Video :">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+   </left>
+   <bottom>
+      <Button fx:id="submitButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="78.0" text="Submit" BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets />
+            <Insets bottom="10.0" />
          </BorderPane.margin>
-      </Slider>
-   </top>
+      </Button>
+   </bottom>
+   <right>
+      <Button fx:id="browseButton" alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Browse" BorderPane.alignment="BOTTOM_RIGHT">
+         <opaqueInsets>
+            <Insets right="10.0" />
+         </opaqueInsets>
+         <BorderPane.margin>
+            <Insets bottom="60.0" right="20.0" />
+         </BorderPane.margin>
+      </Button>
+   </right>
+   <center>
+      <VBox maxWidth="229.0" prefHeight="199.0" prefWidth="229.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextField fx:id="chickNum">
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
+            </TextField>
+            <TextField fx:id="videoPath">
+               <VBox.margin>
+                  <Insets top="60.0" />
+               </VBox.margin>
+            </TextField>
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
