--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/LaunchScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/LaunchScreen.fxml
@@ -2,60 +2,33 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="239.0" prefWidth="491.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-   <left>
-      <VBox maxHeight="307.0" prefHeight="199.0" prefWidth="156.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label fx:id="numChickLabel" prefHeight="84.0" prefWidth="176.0" text="        Number of Chicks :">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="videoSelectLabel" prefHeight="84.0" prefWidth="174.0" text="                Select Video :">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-         </children>
-      </VBox>
-   </left>
-   <bottom>
-      <Button fx:id="submitButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="78.0" text="Submit" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="10.0" />
-         </BorderPane.margin>
-      </Button>
-   </bottom>
-   <right>
-      <Button fx:id="browseButton" alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Browse" BorderPane.alignment="BOTTOM_RIGHT">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="624.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.LaunchScreenController">
+   <top>
+      <Button fx:id="browseButton" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#handleBrowse" prefHeight="25.0" prefWidth="124.0" text="Choose your video: " BorderPane.alignment="CENTER">
          <opaqueInsets>
             <Insets right="10.0" />
          </opaqueInsets>
          <BorderPane.margin>
-            <Insets bottom="60.0" right="20.0" />
+            <Insets bottom="60.0" right="20.0" top="40.0" />
          </BorderPane.margin>
       </Button>
-   </right>
+   </top>
    <center>
-      <VBox maxWidth="229.0" prefHeight="199.0" prefWidth="229.0" BorderPane.alignment="CENTER">
-         <children>
-            <TextField fx:id="chickNum">
-               <VBox.margin>
-                  <Insets top="30.0" />
-               </VBox.margin>
-            </TextField>
-            <TextField fx:id="videoPath">
-               <VBox.margin>
-                  <Insets top="60.0" />
-               </VBox.margin>
-            </TextField>
-         </children>
-      </VBox>
+      <ImageView fx:id="videoView" fitHeight="450.0" fitWidth="550.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="50.0" />
+         </BorderPane.margin>
+      </ImageView>
    </center>
+   <bottom>
+      <Slider fx:id="sliderSeekBar" maxWidth="600.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="90.0" />
+         </BorderPane.margin>
+      </Slider>
+   </bottom>
 </BorderPane>
