--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/LaunchScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/LaunchScreen.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="624.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.LaunchScreenController">
    <top>
@@ -25,10 +26,19 @@
       </ImageView>
    </center>
    <bottom>
-      <Slider fx:id="sliderSeekBar" maxWidth="600.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="90.0" />
-         </BorderPane.margin>
-      </Slider>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <Slider fx:id="sliderSeekBar" maxWidth="600.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="600.0">
+               <VBox.margin>
+                  <Insets left="100.0" />
+               </VBox.margin>
+            </Slider>
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="161.0" text="Submit Clear Frame">
+               <VBox.margin>
+                  <Insets left="300.0" top="50.0" />
+               </VBox.margin>
+            </Button>
+         </children>
+      </VBox>
    </bottom>
 </BorderPane>
