--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/LaunchScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/LaunchScreen.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="624.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.LaunchScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="624.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.LaunchScreenController">
    <top>
       <Button fx:id="browseButton" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#handleBrowse" prefHeight="25.0" prefWidth="124.0" text="Choose your video: " BorderPane.alignment="CENTER">
          <opaqueInsets>
@@ -39,7 +39,7 @@
                   <Insets bottom="10.0" left="50.0" right="50.0" />
                </VBox.margin>
             </Slider>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="161.0" text="Submit Blank Frame">
+            <Button mnemonicParsing="false" onAction="#handleSubmit" prefHeight="25.0" prefWidth="161.0" text="Submit Blank Frame">
                <VBox.margin>
                   <Insets left="235.0" />
                </VBox.margin>
