--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/SecondWindow.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/SecondWindow.fxml
@@ -1,16 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.SecondWindowController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="624.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.SecondWindowController">
    <center>
-      <Label text="hello" BorderPane.alignment="CENTER">
-         <font>
-            <Font size="64.0" />
-         </font>
-      </Label>
+      <ImageView fx:id="videoView" fitHeight="381.0" fitWidth="513.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="40.0" />
+         </BorderPane.margin>
+      </ImageView>
    </center>
+   <top>
+      <ToolBar prefHeight="86.0" prefWidth="624.0" BorderPane.alignment="CENTER">
+        <items>
+          <Button fx:id="btnAutoTrack" mnemonicParsing="false" text="Start Auto-Tracking" />
+            <Slider fx:id="sliderVideoTIme" maxWidth="600.0" prefHeight="14.0" prefWidth="462.0">
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+            </Slider>
+        </items>
+         <BorderPane.margin>
+            <Insets bottom="50.0" />
+         </BorderPane.margin>
+      </ToolBar>
+   </top>
+   <bottom>
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="100.0" prefWidth="127.0">
+               <children>
+                  <Label fx:id="startFrameLabel" prefHeight="20.0" prefWidth="137.0" text="Start Frame Num:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="endFrameLabel" text="End  Frame Num:">
+                     <VBox.margin>
+                        <Insets top="40.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+            <VBox prefHeight="100.0" prefWidth="133.0">
+               <children>
+                  <TextField fx:id="textfieldStartFrame" prefHeight="25.0" prefWidth="134.0" />
+                  <TextField fx:id="textfieldEndFrame">
+                     <VBox.margin>
+                        <Insets top="35.0" />
+                     </VBox.margin>
+                  </TextField>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+   </bottom>
 </BorderPane>
