--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/LaunchScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/LaunchScreen.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="624.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.LaunchScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="677.0" prefWidth="831.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.LaunchScreenController">
    <top>
       <Button fx:id="browseButton" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#handleBrowse" prefHeight="25.0" prefWidth="124.0" text="Choose your video: " BorderPane.alignment="CENTER">
          <opaqueInsets>
@@ -23,37 +23,21 @@
    <center>
       <BorderPane fx:id="videoPane">
          <top>
-            <ImageView fx:id="videoView" fitHeight="420.0" fitWidth="625.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+            <ImageView fx:id="videoView" fitHeight="420.0" fitWidth="611.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets left="140.0" />
+               </BorderPane.margin></ImageView>
          </top>
       </BorderPane>
    </center>
    <bottom>
-      <VBox prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Drag the slider to your preferred blank frame:">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="200.0" />
-               </VBox.margin>
-            </Label>
-            <Slider fx:id="sliderSeekBar" maxWidth="640.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="600.0">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="3.0" />
-               </VBox.margin>
-            </Slider>
-            <ChoiceBox fx:id="chickChoice" prefWidth="150.0">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </ChoiceBox>
-            <Button fx:id="submitButton" mnemonicParsing="false" onAction="#handleSubmit" prefHeight="25.0" prefWidth="161.0" text="Start Auto-Tracking">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="235.0" />
-               </VBox.margin>
-            </Button>
+            <Button fx:id="submitButton" layoutX="340.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleSubmit" prefHeight="25.0" prefWidth="161.0" text="Start Auto-Tracking" />
+            <Label layoutX="340.0" layoutY="92.0" text="Drag the slider to your preferred start frame:" />
+            <Slider fx:id="sliderSeekBar" layoutX="169.0" layoutY="118.0" maxWidth="640.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="600.0" />
+            <ChoiceBox fx:id="chickChoice" layoutX="6.0" layoutY="53.0" prefWidth="150.0" />
          </children>
-         <BorderPane.margin>
-            <Insets top="20.0" />
-         </BorderPane.margin>
-      </VBox>
+      </AnchorPane>
    </bottom>
 </BorderPane>
