--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
@@ -7,25 +7,25 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="489.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="489.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.ChickNameWindowController">
    <children>
-      <Label layoutX="39.0" layoutY="40.0" prefHeight="30.0" prefWidth="214.0" text="Number of Chickens: ">
+      <Label fx:id="nimChickLbl" layoutX="39.0" layoutY="40.0" prefHeight="30.0" prefWidth="214.0" text="Number of Chickens: ">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
       <TextField fx:id="chickNum" layoutX="253.0" layoutY="43.0" prefHeight="25.0" prefWidth="171.0" />
-      <Label layoutX="39.0" layoutY="210.0" prefHeight="30.0" prefWidth="214.0" text="Chick 2: ">
+      <Label fx:id="chick2lbl" layoutX="39.0" layoutY="210.0" prefHeight="30.0" prefWidth="214.0" text="Chick 2: ">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="39.0" layoutY="248.0" prefHeight="30.0" prefWidth="214.0" text="Chick 3: ">
+      <Label fx:id="chick3Lbl" layoutX="39.0" layoutY="248.0" prefHeight="30.0" prefWidth="214.0" text="Chick 3: ">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="39.0" layoutY="174.0" prefHeight="30.0" prefWidth="214.0" text="Chick 1: ">
+      <Label fx:id="chick1Lbl" layoutX="39.0" layoutY="174.0" prefHeight="30.0" prefWidth="214.0" text="Chick 1: ">
          <font>
             <Font size="20.0" />
          </font>
@@ -33,11 +33,11 @@
       <TextField fx:id="chick2ID" layoutX="253.0" layoutY="212.0" prefHeight="25.0" prefWidth="171.0" />
       <TextField fx:id="chick3ID" layoutX="253.0" layoutY="250.0" prefHeight="25.0" prefWidth="171.0" />
       <TextField fx:id="chick1ID" layoutX="253.0" layoutY="174.0" prefHeight="25.0" prefWidth="171.0" />
-      <Label layoutX="39.0" layoutY="130.0" prefHeight="30.0" prefWidth="294.0" text="Assign an ID to your chicks:">
+      <Label fx:id="directionLabel" layoutX="106.0" layoutY="130.0" prefHeight="30.0" prefWidth="294.0" text="Assign an ID to your chicks:">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="submitButton" layoutX="193.0" layoutY="278.0" mnemonicParsing="false" text="Submit" />
+      <Button fx:id="submitButton" layoutX="193.0" layoutY="278.0" mnemonicParsing="false" onAction="#handleSubmit" text="Submit" />
    </children>
 </AnchorPane>
