--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="677.0" prefWidth="831.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.TrackScreenController">
    <top>
@@ -23,9 +24,9 @@
    <center>
       <BorderPane fx:id="videoPane">
          <top>
-            <ImageView fx:id="videoView" fitHeight="420.0" fitWidth="611.0" onMouseClicked="#drawDot" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+            <ImageView fx:id="videoView" fitHeight="420.0" fitWidth="773.0" onMouseClicked="#drawDot" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                <BorderPane.margin>
-                  <Insets left="140.0" />
+                  <Insets left="40.0" />
                </BorderPane.margin></ImageView>
          </top>
       </BorderPane>
@@ -33,11 +34,16 @@
    <bottom>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="submitButton" layoutX="454.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleSubmit" prefHeight="25.0" prefWidth="161.0" text="Start Auto-Tracking" />
-            <Label layoutX="436.0" layoutY="92.0" text="Drag the slider to your preferred start frame:" />
-            <Slider fx:id="sliderSeekBar" layoutX="255.0" layoutY="113.0" maxWidth="640.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="562.0" />
+            <Button fx:id="submitButton" layoutX="463.0" layoutY="79.0" mnemonicParsing="false" onAction="#handleSubmit" prefHeight="25.0" prefWidth="161.0" text="Start Auto-Tracking" />
+            <Label layoutX="425.0" layoutY="29.0" text="Drag the slider to your preferred start frame:" />
+            <Slider fx:id="sliderSeekBar" layoutX="282.0" layoutY="59.0" maxWidth="640.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="528.0" />
             <ChoiceBox fx:id="chickChoice" layoutX="6.0" layoutY="53.0" prefWidth="150.0" />
-            <Button fx:id="playVideoButton" layoutX="156.0" layoutY="107.0" mnemonicParsing="false" onAction="#handlePlayVideo" prefHeight="25.0" prefWidth="92.0" text="Play Video" />
+            <Button fx:id="playVideoButton" layoutX="190.0" layoutY="54.0" mnemonicParsing="false" onAction="#handlePlayVideo" prefHeight="25.0" prefWidth="92.0" text="Play Video" />
+            <Label fx:id="choiceBoxLabel" layoutX="6.0" layoutY="27.0" prefHeight="17.0" prefWidth="147.0" text="      Choose a chick">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </bottom>
