--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
@@ -54,7 +54,7 @@
                <font>
                   <Font size="14.0" />
                </font></Label>
-            <Slider fx:id="sliderSeekBar" layoutX="225.0" layoutY="62.0" maxWidth="640.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="546.0" />
+            <Slider fx:id="sliderSeekBar" layoutX="225.0" layoutY="62.0" maxWidth="640.0" prefHeight="14.0" prefWidth="546.0" />
             <Button fx:id="playVideoButton" layoutX="45.0" layoutY="54.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" text="Calibration">
                <font>
                   <Font size="14.0" />
