--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
@@ -60,7 +60,7 @@
                   <Font size="14.0" />
                </font></Label>
             <Slider fx:id="sliderSeekBar" layoutX="225.0" layoutY="62.0" maxWidth="640.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="546.0" />
-            <Button fx:id="playVideoButton" layoutX="14.0" layoutY="54.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" text="Calibration">
+            <Button fx:id="playVideoButton" layoutX="25.0" layoutY="29.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" text="Calibration">
                <font>
                   <Font size="14.0" />
                </font></Button>
@@ -73,6 +73,7 @@
             <Button fx:id="Forward" layoutX="711.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleForward" text="Forward" />
             <ChoiceBox fx:id="timeStepCb" layoutX="225.0" layoutY="116.0" prefHeight="25.0" prefWidth="70.0" />
             <Label layoutX="252.0" layoutY="120.0" text="sec" />
+            <Button fx:id="FrameBtn" layoutX="34.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleFrame" text="Start Frame" />
          </children>
       </AnchorPane>
    </bottom>
