--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
@@ -2,42 +2,50 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="489.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.ChickNameWindowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="463.0" prefWidth="511.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.ChickNameWindowController">
    <children>
-      <Label fx:id="nimChickLbl" layoutX="39.0" layoutY="40.0" prefHeight="30.0" prefWidth="214.0" text="Number of Chickens: ">
+      <Label fx:id="nimChickLbl" layoutX="14.0" layoutY="16.0" prefHeight="30.0" prefWidth="214.0" text="Number of Chickens: ">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <TextField fx:id="chickNum" layoutX="253.0" layoutY="43.0" prefHeight="25.0" prefWidth="171.0" />
-      <Label fx:id="chick2lbl" layoutX="39.0" layoutY="210.0" prefHeight="30.0" prefWidth="214.0" text="Chick 2: ">
+      <TextField fx:id="chickNum" layoutX="228.0" layoutY="19.0" prefHeight="25.0" prefWidth="111.0" />
+      <Label fx:id="directionLabel" layoutX="97.0" layoutY="55.0" prefHeight="30.0" prefWidth="294.0" text="Assign an ID to your chicks:">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label fx:id="chick3Lbl" layoutX="39.0" layoutY="248.0" prefHeight="30.0" prefWidth="214.0" text="Chick 3: ">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="chick1Lbl" layoutX="39.0" layoutY="174.0" prefHeight="30.0" prefWidth="214.0" text="Chick 1: ">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <TextField fx:id="chick2ID" layoutX="253.0" layoutY="212.0" prefHeight="25.0" prefWidth="171.0" />
-      <TextField fx:id="chick3ID" layoutX="253.0" layoutY="250.0" prefHeight="25.0" prefWidth="171.0" />
-      <TextField fx:id="chick1ID" layoutX="253.0" layoutY="174.0" prefHeight="25.0" prefWidth="171.0" />
-      <Label fx:id="directionLabel" layoutX="106.0" layoutY="130.0" prefHeight="30.0" prefWidth="294.0" text="Assign an ID to your chicks:">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Button fx:id="submitButton" layoutX="193.0" layoutY="278.0" mnemonicParsing="false" onAction="#handleSubmit" text="Submit" />
+      <Button fx:id="submitButton" layoutX="229.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleSubmit" text="Submit" />
+      <Button layoutX="363.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleUpdateNumChicks" text="Update" />
+      <ScrollPane hbarPolicy="NEVER" layoutX="60.0" layoutY="96.0" onDragDetected="#handleUpdateNumChicks" vbarPolicy="ALWAYS">
+         <content>
+            <GridPane fx:id="gridChickNames" prefWidth="369.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
